--- a/app/src/main/res/layout/article_card_item.xml
+++ b/app/src/main/res/layout/article_card_item.xml
@@ -6,7 +6,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/article_card_item"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="16dp"
         android:layout_alignParentTop="true"
