--- a/app/src/main/res/layout/article_card_item.xml
+++ b/app/src/main/res/layout/article_card_item.xml
@@ -23,11 +23,11 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_image_24px"/>
             <TextView
+                android:id="@+id/article_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textAlignment="center"
-                android:text="Hello World!"/>
+                android:textAlignment="center" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
